@@ -1,29 +1,39 @@
 #!/usr/bin/perl
 =head1 NAME
 
-backend_modperl_require.pl
+switchFactory.pl
 
 =head1 DESCRIPTION
 
-Pre-loading PacketFence's modules in Apache (mod_perl) for the Web Admin / Web Services Back-End
+Some performance benchmarks on switchFactory object creation
 
 =cut
-use lib "/usr/local/pf/lib";
-
 use strict;
 use warnings;
+use diagnostics;
 
-use Log::Log4perl;
+use Benchmark qw(cmpthese);
 
-use pf::config;
-use pf::locationlog;
-use pf::node;
-use pf::SNMP;
+use lib '/usr/local/pf/lib';
+
+=head1 TESTS
+
+=over
+
+=cut
 use pf::SwitchFactory;
-use pf::util;
 
-# Forces a pre-load of the SwitchFactory singleton to avoid penalty performance on first request
-pf::SwitchFactory->getInstance();
+=item Singleton gain
+
+=cut
+cmpthese(1000, {
+    getInstance => sub { 
+        pf::SwitchFactory->getInstance();
+    },
+    'new' => sub { 
+        pf::SwitchFactory->new();
+    }
+});
 
 =head1 AUTHOR
 
@@ -31,10 +41,10 @@ Olivier Bilodeau <obilodeau@inverse.ca>
         
 =head1 COPYRIGHT
         
-Copyright (C) 2010-2011 Inverse inc.
+Copyright (C) 2011 Inverse inc.
 
-=head1 LICENSE 
-
+=head1 LICENSE
+    
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
@@ -51,4 +61,3 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
 USA.            
                 
 =cut
-1;
